--- a/package.json
+++ b/package.json
@@ -65,5 +65,8 @@
 		"stylelint": "^16.8.1",
 		"stylelint-config-standard": "^36.0.1",
 		"stylelint-order": "^6.0.4"
+	},
+	"dependencies": {
+		"scroll-lock": "^2.1.5"
 	}
 }
