--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"stylelint-order": "^6.0.4"
 	},
 	"dependencies": {
+		"@fancyapps/ui": "^5.0.36",
 		"@splidejs/splide": "^4.1.4",
 		"scroll-lock": "^2.1.5"
 	}
